--- a/proposal.html
+++ b/proposal.html
@@ -116,7 +116,7 @@
     setInterval(createHeart, 300);
 
     // Proposal logic
-    const correctName = "DASZUB !";
+    const correctName = "Daszub";
     const name = localStorage.getItem('valentineName');
     const proposalText = document.getElementById('proposalText');
     const buttons = document.getElementById('buttons');
